# SoDaRadio

./: .gitignore  .gitmodules  BuildingSoDaRadio.txt  CMakeLists.txt  CONTRIBUTING.md  COPYING  ChangeLog  Doxyfile  Doxyfile.in  DoxygenLayout.xml  History.md  INSTALL_FROM_KIT.txt  LICENSE  MacOS_Hints.txt  Makefile.am  Makefile.in  NEWS  Note.txt  Notes.txt  README  README.md  SoDaFormatConfig.cmake  SoDaFormatConfigVersion.cmake.in  SoDaRadio-5.0.0-1.x86_64.Fedora-24.rpm  SoDaRadio-5.0.0-1.x86_64.Fedora-25.rpm  SoDaRadioConfig.cmake  SoDaRadioConfigVersion.cmake.in  THIS_BRANCH_WAS_ABANDONED_IGNORE_IT  _config.yml  aclocal.m4  configure  configure.ac  do_test.sh  howto_build_with_localwx.txt  project_rpm.spec.in  saved_git_version.txt  saved_svn_version.txt  version.h.in
arduino/: README
branches/OSXport/: Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac  saved_svn_version.txt
branches/OSXport/exp/: Hilbert_Test.cxx  Makefile.am  Makefile.in  MultiMBox_Test.cxx  Sockets_Test.cxx
branches/OSXport/gui/: FindHome.cxx  Makefile.am  Makefile.in  SoDaRadio.fbp  SoDaRadio_App.cxx  SoDaRadio_GUI.cpp  SoDaRadio_Top.cxx  SoDaRadio_Top_Events.cxx  waterfall.cxx  xyplot.cxx
branches/OSXport/m4/: ax_uhd.m4
branches/OSXport/src/: AudioALSA.cxx  AudioALSA.hxx  AudioRX.cxx  HilbertTransformer.cxx  Makefile.am  Makefile.in  MultiMBox.hxx  ReSampler.cxx  SoDaBase.hxx  TSIP.cxx  UDSockets.cxx  UI.cxx  USRPCtrl.hxx
branches/testeq/gui-testeq/: BenchListenerThread.cxx  Makefile.am  SoDaBench.fbp  SoDaBench_App.cxx  SoDaBench_App.hxx  SoDaBench_GUI.cpp  SoDaBench_GUI.h  SoDaBench_Top.cxx  SoDaBench_Top.h  SoDaBench_Top.hxx  adjust_GUI.sh  adjust_GUI.sh.in
branches/testeq/src/: AudioIfc.hxx  AudioRX.cxx  AudioRX.hxx  BenchUI.cxx  BenchUI.hxx  Command.cxx  Command.hxx  Makefile.am  Makefile.in  NFThermometer.cxx  NFThermometer.hxx  Params.cxx  Params.hxx  SoDaBase.hxx  SoDaBenchServer.cxx  SoDaCan.cxx  SoDaNFSurvey.cxx  USRPCtrl.cxx  USRPCtrl.hxx  USRPRX.cxx  USRPTX.cxx  USRPTX.hxx
cmake/: FindRTLSDR.txt
common/: CircularBuffer.hxx  GuiParams.cxx  GuiParams.hxx  Navigation.cxx  Navigation.hxx  SoDaRadio_Band.hxx
docs/: AudioALSA_8cxx.html  AudioALSA_8cxx_source.html  AudioALSA_8hxx.html  AudioALSA_8hxx_source.html  AudioIfc_8hxx.html  AudioIfc_8hxx_source.html  AudioPA_8cxx.html  AudioPA_8cxx_source.html  AudioPA_8hxx.html  AudioPA_8hxx_source.html  Audio__test_8cxx.html  Audio__test_8cxx_source.html  CWTX_8cxx.html  (+542 more)
example/: CMakeLists.txt  FormatExample.cxx
exp/: Audio_test.cxx  CMakeLists.txt  CircularBuffer_test.cxx  CommandInterp_Test.cxx  DCBlock_Test.cxx  DDCExp_makedat.sh  DDCExp_makeplots.sh  DDC_Analyze.cxx  DDC_Post.cxx  DDC_Test.cxx  Demod_test.cxx  FFT_Test.cxx  FilterTest.cxx  FindHome_Test.cxx  FrontEnd_test.cxx  Hilbert_Test.cxx  IFServer_Test.cxx  IntN_FreqTable.cxx  InterpTable_Test.cxx  LineSockets_Test.cxx  Makefile.am  Makefile.in  MultiMBox_Test.cxx  NCOexp.cxx  OSFilter_Test.cxx  OneFilterTest.cxx  PeriodogramTest.cxx  ProcInfo_test.cxx  RangeMap_test.cxx  ReSampler_Test.cxx  ResamplerSpeed.cxx  SerialDev_Test.cxx  SoDa_ThreadTest.cxx  Sockets_Test.cxx  TDReSampler_Test.cxx  TDResampler_Test.cxx  TRControl_Test.cxx  TestServer.cxx  USRP2_Cordic_Model.cxx  USRPFrontEnd_test.cxx  (+2 more)
gui/: CMakeLists.txt  Default.soda_cfg  Default.soda_cfg.h  DefaultSNA.cfg.h  FindHome.cxx  GraphClient.hxx  GuiParams.cxx  GuiParams.hxx  HamlibListener.cxx  HamlibListener.hxx  Makefile.am  Makefile.in  RadioListenerThread.cxx  RadioListenerThread.hxx  SNAListenerThread.cxx  SNAListenerThread.hxx  SoDaRadio.fbp  SoDaRadio_App.cxx  SoDaRadio_Band.hxx  SoDaRadio_GUI.cpp  SoDaRadio_GUI.cxx  SoDaRadio_GUI.h  SoDaRadio_Top.cxx  SoDaRadio_Top.h  SoDaRadio_Top_Config.cxx  SoDaRadio_Top_Events.cxx  SoDaSNA.fbp  SoDaSNA_App.cxx  SoDaSNA_App.hxx  SoDaSNA_GUI.cpp  SoDaSNA_GUI.h  SoDaSNA_Top.cxx  SoDaSNA_Top.h  SoDaSNA_Top_Calibrate.cxx  SoDaSNA_Top_Config.cxx  SoDaSNA_Top_Events.cxx  adjust_GUI.sh  adjust_GUI.sh.in  dem-gridlib.c  waterfall.cxx  (+3 more)
gui-testeq/: BenchListenerThread.cxx  BenchListenerThread.hxx  Makefile.am  SoDaBench.fbp  SoDaBench_GUI.cpp  SoDaBench_GUI.h  SoDaBench_Top.cxx  SoDaBench_Top.h  SoDaRFBench.fbp
qtgui/: CMakeLists.txt  SoDaLogo_Big.xpm  SoDaRadioQT.pro  SoDaRadio_Config.cxx  SoDaRadio_Config.hxx  freqlabel.cpp  freqlabel.h  freqlabel.hpp  logtable.cpp  logtable.hpp  main.cpp  main_setup_bandconfig.cpp  main_setup_hamlib.cpp  main_setup_logeditor.cpp  main_setup_loggps.cpp  main_setup_mid.cpp  main_setup_settings.cpp  main_setup_spect.cpp  main_setup_status.cpp  main_setup_top.cpp  main_sodaradio.cpp  mainwindow.cpp  mainwindow.h  mainwindow.hpp  mainwindow.ui  soda_audio_listener.cpp  soda_audio_listener.hpp  soda_band.hpp  soda_comboboxes.cpp  soda_comboboxes.h  soda_comboboxes.hpp  soda_freq_scale_draw.hpp  soda_hamlib_handler.cpp  soda_hamlib_handler.hpp  soda_hamlib_listener.cpp  soda_hamlib_listener.hpp  soda_hamlib_server.cpp  soda_hamlib_server.hpp  soda_list_spinbox.h  soda_list_spinbox.hpp  (+17 more)
src/: AudioALSA.cxx  AudioALSA.hxx  AudioIfc.hxx  AudioPA.cxx  AudioPA.hxx  AudioQt.cxx  AudioQt.hxx  AudioQtRX.cxx  AudioQtRX.hxx  AudioQtRXTX.cxx  AudioQtRXTX.hxx  AudioQtTX.cxx  AudioQtTX.hxx  AudioRX.cxx  AudioRX.hxx  AudioTX.cxx  AudioTX.hxx  B200Control.cxx  B200Control.hxx  BaseBandRX.cxx  BaseBandRX.hxx  BaseBandTX.cxx  BaseBandTX.hxx  BenchUI.cxx  BenchUI.hxx  BlockOp.hxx  Buffer.cxx  Buffer.hxx  BufferPool.hxx  CMakeLists.txt  CWGenerator.cxx  CWGenerator.hxx  CWTX.cxx  CWTX.hxx  Command.cxx  Command.hxx  CommandInterpreter.hxx  CommandMonitor.cxx  CommandMonitor.hxx  CtrlBase.cxx  (+160 more)
ssgui/: CMakeLists.txt  SimpleSpectrum.fbp  SimpleSpectrum_GUI.cpp  SimpleSpectrum_GUI.h
trunk/exp/: Makefile.am  Makefile.in  ReSampler_Test.cxx
tuning/: CMakeLists.txt
wxgui/: CMakeLists.txt  Default.soda_cfg  Default.soda_cfg.h  RadioListenerThread.cxx  SoDaLogo.xpm  SoDaRadio.fbp  SoDaRadio_App.cxx  SoDaRadio_App.hxx  SoDaRadio_GUI.cpp  SoDaRadio_Top.cxx  SoDaRadio_Top.h  SoDaRadio_Top_Events.cxx  WXGuiParams.hxx  adjust_GUI.sh.in  downarrow.xpm  uparrow.xpm
(+748 files in other folders)
